@@ -3,6 +3,7 @@ Version 4.1.1 (2014-07-xx)
 	Fixed bug where resizing images inside tables on IE 11 wouldn't work properly.
 	Fixed bug where IE 11 would sometimes throw "Invalid argument" exception when editor contents was set to an empty string.
 	Fixed bug where document.activeElement would throw exceptions on IE 9 when that element was hidden or removed from dom.
+	Fixed bug where WebKit/Blink sometimes produced br elements with the Apple-interchange-newline class.
 	Fixed so DomQuery parentsUntil/prevUntil/nextUntil supports selectors/elements/filters etc.
 	Fixed bug where custom elements with underscores in the name wasn't properly parsed/serialized.
 Version 4.1.0 (2014-06-18)
